# -bazel-go-mod-experiment

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  TODO.txt  go.mod  go.work  go.work.sum  main.go
.github/workflow/: ci.yaml
.github/workflows/: BUILD.bazel  ci.yaml
archive_tool/: BUILD.bazel  go.mod  main.go
extensions/gazelle/go_mod/: BUILD.bazel  extension.go
foo/: BUILD.bazel  foo.go
foo/bar/: BUILD.bazel  go.mod
gazelle/languages/go_mod/: BUILD.bazel  extension.go  go.sum
gazelle/languages/module_files/: extension.go
gazelle_languages/go_mod/: BUILD.bazel  extension.go
gazelle_languages/module_files/: BUILD.bazel  extension.go  extensions_test.go  go.mod  set.go
go_mod_tool/: BUILD.bazel  add_file_to_zip.go  add_file_to_zip_test.go  cmd.go  go.mod  main.go  parse_stamp_file.go  parse_stamp_file_test.go  parse_status_file.go  parse_status_file_test.go  run.go  run_test.go  strip_path_prefix.go  strip_path_prefix_test.go
mod_a/: BUILD.bazel  go.mod  main.go
mod_a/baz/: BUILD.bazel  banana.go  baz.go
mod_a/foo/: BUILD.bazel
mod_b/: BUILD.bazel  go.mod  go_mod_test.sh  lib.go
rules/: BUILD.bazel  go_mod.bzl
tools/: BUILD.bazel  workspace_status.sh
tools/gazelle_go_mod/: BUILD.bazel  extension.go  go.mod
