load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_binary",
    languages = [
        "@gazelle//language/go",  # Built-in rule from gazelle for Golang.
        "@gazelle//language/proto",  # Built-in rule from gazelle for Protos.
        "//gazelle_languages/module_files",
        "//gazelle_languages/go_mod",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

filegroup(
    name = "_pkg_",
    srcs = [
        "BUILD.bazel",
        "MODULE.bazel",
        "MODULE.bazel.lock",
        "README.md",
        "TODO.txt",
        "go.work",
        "go.work.sum",
        "//.github/workflows:_pkg_",
        "//gazelle_languages/go_mod:_pkg_",
        "//go_mod_tool:_pkg_",
        "//mod_b:_pkg_",
        "//tools:_pkg_",
    ],
    visibility = ["//:__subpackages__"],
)
