module(
    name = "bazel-go-mod-experiment",
    version = "0.1",
)

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(go_deps, "com_github_stefanpenner__bazel_go_mod_experiment_mod_b")
