module(
    name = "bazel-go-mod-experiment",
    version = "0.1",
)

bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0", repo_name = "bazel_gazelle")
bazel_dep(name = "aspect_bazel_lib", version = "2.15.3")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//:go.work")
use_repo(go_deps, "com_github_spf13_cobra", "com_github_stefanpenner__bazel_go_mod_experiment_mod_b", "com_github_stretchr_testify")
