load("@bazel-go-mod-experiment//rules:go_mod.bzl", "go_mod")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "mod_a_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/-bazel-go-mod-experiment/mod_a",
    visibility = ["//visibility:private"],
    deps = [
        "//mod_a/foo",
        "//mod_b",
    ],
)

go_binary(
    name = "mod_a",
    embed = [":mod_a_lib"],
    visibility = ["//visibility:public"],
)

go_mod(
    name = "go_mod_zip",
    srcs = [],
    go_mod = ":go.mod",
    module_path = "mod_a",
)
