load("@bazel-go-mod-experiment//rules:go_mod.bzl", "go_mod")
load("@rules_go//go:def.bzl", "go_library")

sh_test(
    name = "go_mod_test",
    srcs = ["go_mod_test.sh"],
    data = [":go_mod_zip"],
    env = {
        "GO_MOD": "$(location :go_mod_zip)",
    },
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

go_library(
    name = "mod_b",
    srcs = ["lib.go"],
    importpath = "github.com/stefanpenner/-bazel-go-mod-experiment/mod_b",
    visibility = ["//visibility:public"],
)

go_mod(
    name = "go_mod_zip",
    srcs = [":_pkg_"],
    go_mod = ":go.mod",
    module_path = "mod_b",
    strip_prefix = "mod_b",
)

filegroup(
    name = "_pkg_",
    srcs = [
        "BUILD.bazel",
        "README.md",
        "go.mod",
        "go.sum",
        "go_mod_test.sh",
        "lib.go",
    ],
    visibility = ["//:__subpackages__"],
)
