load("@bazel-go-mod-experiment//rules:go_mod.bzl", "go_mod")
load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "module_files",
    srcs = [
        "extension.go",
        "set.go",
    ],
    importpath = "bazel-go-mod-experiment/gazelle/languages/module_files",
    visibility = ["//visibility:public"],
    deps = [
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_mod(
    name = "go_mod_zip",
    srcs = [":_pkg_"],
    go_mod = ":go.mod",
    module_path = "gazelle/languages/module_files",
)

go_test(
    name = "module_files_test",
    srcs = ["extensions_test.go"],
    embed = [":module_files"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@gazelle//config",
        "@gazelle//language",
        "@gazelle//rule",
        "@gazelle//testtools",
        "@gazelle//walk",
    ],
)

filegroup(
    name = "_pkg_",
    srcs = [
        "BUILD.bazel",
        "extension.go",
        "extensions_test.go",
        "go.mod",
        "go.sum",
        "set.go",
    ],
    visibility = ["//:__subpackages__"],
)
