load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "baz",
    srcs = [
        "banana.go",
        "baz.go",
    ],
    importpath = "github.com/stefanpenner/-bazel-go-mod-experiment/mod_a/baz",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "_pkg_",
    srcs = [
        "BUILD.bazel",
        "banana.go",
        "baz.go",
    ],
    visibility = ["//:__subpackages__"],
)
