load("@//rules:go_mod.bzl", "go_mod")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "gazelle_go_mod",
    srcs = ["extension.go"],
    importpath = "bazel-go-mod-experiment/tools/gazelle_go_mod/tools/gazelle_go_mod",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config",
        "@bazel_gazelle//label",
        "@bazel_gazelle//language",
        "@bazel_gazelle//repo",
        "@bazel_gazelle//resolve",
        "@bazel_gazelle//rule",
    ],
)
