load("@bazel-go-mod-experiment//rules:go_mod.bzl", "go_mod")
load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_mod",
    srcs = ["extension.go"],
    importpath = "bazel-go-mod-experiment/tools/gazelle_go_mod/tools/gazelle_go_mod",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)

go_mod(
    name = "extensions/gazelle/go_mod",
    srcs = [],
    go_mod = ":go.mod",
    module_path = "extensions/gazelle/go_mod",
)
